Cover messages with tests
