# config/routes.rb
@@ -7,6 +7,9 @@ Rails.application.routes.draw do
     put :confirm, on: :member
     put :cancel, on: :member
   end
-  resources :messages, only: %i[index]
-  resource :session, onle: [:create]
+  resources :messages, only: %i[] do
+    get :index, on: :member
+    post :create, on: :member
+  end
+  resource :session, only: %i[create]
 end
